Swagger 설명과 예시 추가